--- a/11thLauncher/Views/Controls/ServerStatusView.xaml
+++ b/11thLauncher/Views/Controls/ServerStatusView.xaml
@@ -40,7 +40,8 @@
                                         </Style>
                                     </Rectangle.Style>
                                 </Rectangle>
-                                <Label Content="{Binding Name}" Width="75" />
+                                <TextBlock Text="{Binding Name}" ToolTip="{Binding Name}" Width="75" Margin="0,5,0,5"
+                                           TextWrapping="NoWrap" TextTrimming="CharacterEllipsis" />
                                 <Rectangle x:Name="Status" ToolTip="{x:Static resx:Strings.S_BTN_CHECK_SERVER_STATUS_TIP}"
                                            cal:Message.Attach="CheckServerStatus($datacontext)"
                                            Height="15" Width="15"
