--- a/11thLauncher/Views/SettingsView.xaml
+++ b/11thLauncher/Views/SettingsView.xaml
@@ -28,32 +28,35 @@
         <controls:MetroTabControl HorizontalAlignment="Left" TabStripPlacement="Left" controls:TabControlHelper.Underlined="TabPanel" Width="685">
             <TabItem Header="{x:Static resx:Strings.S_SETTINGS_GENERAL}">
                 <Grid>
-                    <Label Content="{x:Static resx:Strings.S_LABEL_GAME_OPTIONS}"
+
+                    <Label Content="{x:Static resx:Strings.S_LABEL_STARTUP_OPTIONS}" FontWeight="Bold" 
                            HorizontalAlignment="Left" VerticalAlignment="Top"
-                           Width="522" 
-                           Margin="10,103,0,0"
-                           FontWeight="Bold" />
+                           Width="522" Margin="10,10,0,0"/>
+                    <CheckBox x:Name="CheckUpdates" Content="{x:Static resx:Strings.S_CHECKBOX_CHECK_UPDATES}" 
+                              HorizontalAlignment="Left" VerticalAlignment="Top" Margin="17,42,0,0" />
+                    <CheckBox x:Name="CheckServers" Content="{x:Static resx:Strings.S_CHECKBOX_CHECK_SERVERS}" 
+                              HorizontalAlignment="Left" VerticalAlignment="Top" Margin="17,65,0,0" />
+                    <CheckBox x:Name="CheckRepository" Content="{x:Static resx:Strings.S_CHECKBOX_CHECK_REPOSITORY}" 
+                              HorizontalAlignment="Left" VerticalAlignment="Top" Margin="17,88,0,0" />
+
+                    <Label Content="{x:Static resx:Strings.S_LABEL_GAME_OPTIONS}" FontWeight="Bold"
+                           HorizontalAlignment="Left" VerticalAlignment="Top"
+                           Width="522" Margin="10,122,0,0"/>
                     <Label Content="{x:Static resx:Strings.S_LABEL_GAME_PATH}" 
-                           HorizontalAlignment="Left" VerticalAlignment="Top" 
-                           Margin="10,126,0,0" />
-                    <TextBox x:Name="GamePath" 
-                             IsReadOnly="True"
+                           HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,148,0,0" />
+                    <TextBox x:Name="GamePath"  IsReadOnly="True"
                              HorizontalAlignment="Left" VerticalAlignment="Top"
-                             Height="23" Width="308" 
-                             Margin="119,127,0,0" />
-                    <Button x:Name="SelectGamePath" 
-                            Content="{x:Static resx:Strings.S_BTN_BROWSE}"
+                             Height="23" Width="308" Margin="119,149,0,0" />
+                    <Button x:Name="SelectGamePath" Content="{x:Static resx:Strings.S_BTN_BROWSE}"
                             HorizontalAlignment="Left" VerticalAlignment="Top" 
-                            Width="100" 
-                            Margin="432,127,0,0"  />
+                            Width="100" Margin="432,149,0,0"  />
                     <Label Content="{x:Static resx:Strings.S_LABEL_START_ACTION}" 
-                           HorizontalAlignment="Left" VerticalAlignment="Top" 
-                           Margin="10,162,0,0" />
+                           HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,184,0,0" />
                     <ComboBox x:Name="comboBox_startAction" 
                         ItemsSource="{Binding Source={util:Enumeration {x:Type model:StartAction}}}" DisplayMemberPath="Description"
                         HorizontalAlignment="Left" VerticalAlignment="Top" 
                         Width="174"
-                        Margin="119,163,0,0" SelectedIndex="0" />
+                        Margin="119,185,0,0" SelectedIndex="0" />
                 </Grid>
             </TabItem>
             <TabItem Header="{x:Static resx:Strings.S_SETTINGS_REPOSITORY}">
@@ -108,7 +111,7 @@
                             <DataTemplate>
                                 <TextBlock Text="{Binding Converter={StaticResource CultureConverter}}"/>
                             </DataTemplate>
-                        </ComboBox.ItemTemplate>    
+                        </ComboBox.ItemTemplate>
                     </ComboBox>
 
                     <Label Content="{x:Static resx:Strings.S_LABEL_THEME}" HorizontalAlignment="Left" Margin="10,67,0,0" VerticalAlignment="Top" />
