--- a/11thLauncher/Views/Controls/GameView.xaml
+++ b/11thLauncher/Views/Controls/GameView.xaml
@@ -4,33 +4,27 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
+             xmlns:behaviors="clr-namespace:MahApps.Metro.Behaviours;assembly=MahApps.Metro"
              xmlns:m="clr-namespace:_11thLauncher.Models"
              xmlns:vm="clr-namespace:_11thLauncher.ViewModels.Controls"
              xmlns:resx="clr-namespace:_11thLauncher.Resources"
-             xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
              xmlns:cal="clr-namespace:Caliburn.Micro;assembly=Caliburn.Micro.Platform"
              xmlns:util="clr-namespace:_11thLauncher.Views.Util"
              mc:Ignorable="d" 
              d:DesignHeight="337" d:DesignWidth="615" d:DataContext="{d:DesignInstance Type=vm:GameViewModel}">
     <Grid>
         <controls:SplitButton ItemsSource="{Binding Source={util:Enumeration {x:Type m:LaunchOption}}}" DisplayMemberPath="Description"
+                              cal:Message.Attach="[Event Click] = [Action ButtonLaunch];"
                               HorizontalAlignment="Left" VerticalAlignment="Top"
                               HorizontalContentAlignment="Left" 
                               Margin="227,38,0,0"  
                               Width="188" Height="50" 
-                              FontSize="12" FontWeight="Normal"  SelectedIndex="0">
+                              FontSize="12" FontWeight="Normal" SelectedIndex="0">
             <controls:SplitButton.IconTemplate>
                 <DataTemplate>
                     <Image Source="/Resources/game.png" HorizontalAlignment="Left" Width="32" Height="32" Margin="5"/>
                 </DataTemplate>
             </controls:SplitButton.IconTemplate>
-            <i:Interaction.Triggers>
-                <i:EventTrigger EventName="Click">
-                    <cal:ActionMessage MethodName="ButtonLaunch">
-                        <cal:Parameter Value="{Binding ElementName=Password}"></cal:Parameter>
-                    </cal:ActionMessage>
-                </i:EventTrigger>
-            </i:Interaction.Triggers>
         </controls:SplitButton>
 
         <Label Content="{x:Static resx:Strings.S_PLATFORM}"
@@ -56,10 +50,12 @@
         <Label Content="{x:Static resx:Strings.S_SERVER}" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="227,188,0,0" Padding="0,5,5,5"/>
         <TextBox Text="{Binding Server}" HorizontalAlignment="Left" Height="23" Width="188" Margin="227,214,0,0" VerticalAlignment="Top" />
 
-        <Label Content="{x:Static resx:Strings.S_PORT}" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="227,245,0,0"  Padding="0,5,5,5"/>
-        <TextBox Text="{Binding Port}" HorizontalAlignment="Left" VerticalAlignment="Top" Height="23" Width="80" Margin="227,271,0,0" />
+        <Label Content="{x:Static resx:Strings.S_PORT}" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="227,245,0,0" Padding="0,5,5,5"/>
+        <TextBox Text="{Binding Port, Delay=1000}" HorizontalAlignment="Left" VerticalAlignment="Top" Height="23" Width="80" Margin="227,271,0,0" />
 
         <Label Content="{x:Static resx:Strings.S_PASSWORD}" HorizontalAlignment="Left" Margin="320,245,0,0" VerticalAlignment="Top" Padding="0,5,5,5"/>
-        <PasswordBox x:Name="Password" HorizontalAlignment="Left" VerticalAlignment="Top" Width="95" Margin="320,271,0,0" />
+        <PasswordBox behaviors:PasswordBoxBindingBehavior.Password="{Binding Password, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+            HorizontalAlignment="Left" VerticalAlignment="Top" Width="95" Margin="320,271,0,0">
+        </PasswordBox>
     </Grid>
 </UserControl>
