--- a/11thLauncher/Views/MainWindow.xaml
+++ b/11thLauncher/Views/MainWindow.xaml
@@ -2,7 +2,6 @@
                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                       xmlns:controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-                      xmlns:Configuration="clr-namespace:_11thLauncher.Configuration"
                       Title="11th MEU Launcher"
                       TitleCharacterCasing="Normal" 
                       Icon="/11thLauncher;component/Resources/icon.ico" 
@@ -12,61 +11,12 @@
                       ResizeMode="CanMinimize" 
                       BorderThickness="0" 
                       GlowBrush="Black"
-                      LeftWindowCommandsOverlayBehavior="HiddenTitleBar" 
-                      Loaded="MetroWindow_Loaded" 
-                      Closed="MetroWindow_Closed">
-
-    <controls:MetroWindow.Resources>
-        <DataTemplate x:Key="tabTitle">
-            <TextBlock Text="{Binding}" 
-             FontSize="20" />
-        </DataTemplate>
-    </controls:MetroWindow.Resources>
-
-    <controls:MetroWindow.RightWindowCommands>
-        <controls:WindowCommands ShowLastSeparator="False">
-            <Button 
-                    ToolTip="Abrir ventana de opciones" >
-                <StackPanel Orientation="Horizontal">
-                    <Image Stretch="None" Margin="0,0,5,0"/>
-                    <TextBlock Margin="0,1,0,0"><Run Text="Opciones"/></TextBlock>
-                </StackPanel>
-            </Button>
-            <Button 
-                    Content="Actualizar"
-                    ToolTip="Comprobar actualizaciones" />
-            <Button 
-                    Content="Ayuda"
-                    ToolTip="Acerca del launcher" />
-        </controls:WindowCommands>
-    </controls:MetroWindow.RightWindowCommands>
-
+                      LeftWindowCommandsOverlayBehavior="HiddenTitleBar" >
+    
     <Grid>
-        <DockPanel Margin="0,464,0,0">
-            <StatusBar DockPanel.Dock="Bottom">
-                <StatusBarItem>
-                    <TextBlock x:Name="statusBar" Text="Listo"/>
-                </StatusBarItem>
-                <StatusBarItem HorizontalAlignment="Right">
-                    <controls:MetroProgressBar x:Name="progressBar_statusBar" Height="20" Width="113" Foreground="White" IsHitTestVisible="True" IsTabStop="False" Background="{x:Null}" />
-                </StatusBarItem>
-            </StatusBar>
-        </DockPanel>
-
-        <Image x:Name="image_logo" HorizontalAlignment="Left" Height="140" Margin="281,-7,-8,0" VerticalAlignment="Top" Width="365" Source="/Resources/a3logo.png" IsHitTestVisible="False"/>
         <controls:MetroAnimatedSingleRowTabControl x:Name="metroAnimatedSingleRowTabControl" HorizontalAlignment="Left" Margin="10,92,0,0" VerticalAlignment="Top" Height="372" Width="623" controls:TabControlHelper.IsUnderlined="False">
             <TabItem Header="ArmA 3" HeaderTemplate="{StaticResource tabTitle}" >
                 <Grid HorizontalAlignment="Left" Height="337" VerticalAlignment="Top" Width="615">
-
-
-
-                    <Button x:Name="button_clip" Style="{DynamicResource MetroCircleButtonStyle}" HorizontalAlignment="Left" Margin="375,93,0,0" VerticalAlignment="Top" Width="40" Height="40" ToolTip="Copiar linea de inicio al portapapeles" Click="button_clip_Click">
-                        <Rectangle Width="20" Height="20">
-                            <Rectangle.Fill>
-                                <VisualBrush Stretch="Fill" Visual="{StaticResource appbar_clipboard_file}" />
-                            </Rectangle.Fill>
-                        </Rectangle>
-                    </Button>
                 </Grid>
             </TabItem>
             <TabItem Header="Parámetros" HeaderTemplate="{StaticResource tabTitle}" >
