--- a/11thLauncher/Views/Controls/RepositoryStatusView.xaml
+++ b/11thLauncher/Views/Controls/RepositoryStatusView.xaml
@@ -24,9 +24,9 @@
                                 <TextBlock Text="{Binding Name}" ToolTip="{Binding Name}" Width="75" Margin="5,5,0,0" 
                                            TextWrapping="NoWrap" TextTrimming="CharacterEllipsis" />
                                 <controls:Tile x:Name="RepositoryStatus" Content="{x:Static model:RepositoryStatus.Unknown}" 
-                                               cal:Message.Attach="CheckRepositoryStatus($datacontext)" IsEnabled="{Binding Arma3SyncUpdated}"
+                                               cal:Message.Attach="CheckRepositoryStatus($datacontext)"
                                                HorizontalAlignment="Left" VerticalAlignment="Top" 
-                                               Height="18" Width="90" Margin="10,5,0,0"/>
+                                               Height="18" Width="75" Margin="10,5,0,0"/>
                             </StackPanel>
                             <HierarchicalDataTemplate.Triggers>
                                 <DataTrigger Binding="{Binding Status}" Value="{x:Static model:RepositoryStatus.Unknown}">
