Work on parameters

--- a/11thLauncher/Views/Controls/ParametersView.xaml
+++ b/11thLauncher/Views/Controls/ParametersView.xaml
@@ -38,7 +38,8 @@
         <!-- Selection parameter template -->
         <DataTemplate x:Key="ParameterSelectionTemplate" DataType="model:SelectionParameter">
             <StackPanel Orientation="Horizontal" FlowDirection="RightToLeft" Margin="0,3">
-                <ComboBox ItemsSource="{Binding Values}" DisplayMemberPath="DisplayName" IsEnabled="{Binding IsEnabled}" Width="280" Margin="20,0,0,0" FlowDirection="LeftToRight"/>
+                <ComboBox ItemsSource="{Binding Values}" SelectedItem="{Binding SelectedValue}" DisplayMemberPath="DisplayName" IsEnabled="{Binding IsEnabled}" 
+                          Width="280" Margin="20,0,0,0" FlowDirection="LeftToRight"/>
                 <CheckBox IsChecked="{Binding IsEnabled}" Margin="10,0,0,0" />
                 <Label Content="{Binding Path=DisplayName}" ContentStringFormat=":{0}" Width="260">
                     <Label.ToolTip>
