--- a/11thLauncher.Updater/App.xaml
+++ b/11thLauncher.Updater/App.xaml
@@ -1,6 +1,6 @@
-﻿<Application x:Class="_11thLauncherUpdater.App"
+﻿<Application x:Class="_11thLauncher.Updater.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:_11thLauncherUpdater"
+             xmlns:local="clr-namespace:_11thLauncher.Updater"
              Startup="App_Startup">
 </Application>
