--- a/11thLauncher.Updater/MainWindow.xaml
+++ b/11thLauncher.Updater/MainWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="_11thLauncherUpdater.MainWindow"
+﻿<Window x:Class="_11thLauncher.Updater.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:_11thLauncherUpdater"
+        xmlns:local="clr-namespace:_11thLauncher.Updater"
         mc:Ignorable="d"
         Title="11th MEU Launcher Updater" Height="136" Width="525"
         Icon="icon.ico" ResizeMode="CanMinimize" Loaded="Window_Loaded">
